<resources>
    <string name="app_name">homework-m4-1</string>
    <string name="str_home">all</string>
    <string name="title_Notifications">Notifications</string>
    <string name="title_Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="argtext">argtext</string>
    <string name="str_tasks">Tasks</string>
    <string name="str_all_tasks">All</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </string>

    <string name="str_progress_tasks">In progress</string>
    <string name="str_completed_tasks">Completed</string>
</resources>