<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center" xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.TaskEditFragment"
    android:id="@+id/task_edit_">

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/task_add_des"
        android:layout_gravity="center"
        android:gravity="center"
        tools:text="Task description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="task_description"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/rg_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_progress_tasks"/>
        <RadioButton
            android:id="@+id/rb_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_home"/>
        <RadioButton
            android:id="@+id/rb_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_completed_tasks"/>
    </RadioGroup>
    <Button
        android:id="@+id/save_button"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:text="save" />
</LinearLayout>