<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.homework_m4_1.ui.home.viewpager.HomeFragment"
        android:label="@string/str_tasks"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="argtext"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_home_to_taskEditFragment"
            app:destination="@id/taskEditFragment" />
        <argument
            android:name="position"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="addtask"
            app:argType="boolean"
            android:defaultValue="true" />
        <argument
            android:name="category"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.homework_m4_1.ui.dashboard.DashboardFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.homework_m4_1.ui.profile.NotificationsFragment"
        android:label="@string/title_Notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_profileSettingFragment"
            app:destination="@id/profileSettingFragment" />
        <argument
            android:name="user_namearg"
            app:argType="string" />
        <argument
            android:name="user_emailarg"
            app:argType="string" />
        <argument
            android:name="newTextarg"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/taskEditFragment"
        android:name="com.example.homework_m4_1.ui.home.TaskEditFragment"
        android:label="fragment_task_edit"
        tools:layout="@layout/fragment_task_edit" >
        <argument
            android:name="argtask"
            app:argType="com.example.homework_m4_1.ListTasks" />
        <argument
            android:name="addtaskarg"
            app:argType="boolean" />
        <argument
            android:name="typearg"
            app:argType="com.example.homework_m4_1.TypeTasks" />


    </fragment>
    <fragment
        android:id="@+id/profileSettingFragment"
        android:name="com.example.homework_m4_1.ui.profile.ProfileSettingFragment"
        android:label="fragment_profile_setting"
        tools:layout="@layout/fragment_profile_setting" >
        <action
            android:id="@+id/action_profileSettingFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <argument
            android:name="user_namearg"
            app:argType="string" />
        <argument
            android:name="user_emailarg"
            app:argType="string"
            />
        <argument
            android:name="newTextarg"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.homework_m4_1.ui.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_onViewPagerFragment"
            app:destination="@id/onViewPagerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/onViewPagerFragment"
        android:name="com.example.homework_m4_1.ui.onboarding.OnViewPagerFragment"
        android:label="fragment_on_view_pager"
        tools:layout="@layout/fragment_on_view_pager" >
        <action
            android:id="@+id/action_onViewPagerFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/onViewPagerFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>